--- a/index.html
+++ b/index.html
@@ -775,7 +775,7 @@
       </div>
       <div class="credits">
         
-        Designed by <a href="https://shreedipkaini.com.np/" target="_blank">SansTum</a>
+        Designed by <a href="#" target="_blank">Rohan</a>
       </div>
     </div>
   </footer><!-- End Footer -->
