--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                 <h4>PACMAN</h4><br>
                 <p>Play Pacman Online. Supported on PC/Laptops.<br>↓↓↓↓↓↓</p>
                 <div class="portfolio-links">
-                  <a href="pacman/index.html" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Play Now"><i class="bi bi-controller"></i></a>
+                  <a href="pacman/index.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Play Now"><i class="bi bi-controller"></i></a>
                   <a href="pacman/index.html" target="_blank" title="Play in new Tab"><i class="bx bx-link"></i></a>
                 </div>
               </div>
