--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
+  
+  <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
+  
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
@@ -26,6 +29,60 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
+  
+  <!-- Dark mode -->
+<style>
+.buttons {
+  border: none;
+  color: white;
+  padding: 5px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 9px;
+  border-radius: 12px;
+  margin: 2px 1px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+}
+
+.button1 {
+  background-color: white; 
+  color: black; 
+  border: 4px solid #000000;
+}
+
+.button1:hover {
+  background-color: #000000;
+  color: white;
+}
+.button2 {
+  padding: 4px;
+  background-color: white; 
+  color: black; 
+  border: 1px solid #000000;
+}
+
+.button2:hover {
+  background-color: #000000;
+  color: white;
+}
+.button3 {
+  background-color: white; 
+  color: black; 
+  border: 4px solid green;
+}
+
+.button3:hover {
+  background-color: green;
+  color: white;
+  border: 4px solid black;
+}
+.dark-mode {
+  background-color: black;
+  color: white;
+}
+</style>
 
 
 </head>
@@ -44,6 +101,7 @@
         <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
         <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
         <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
+        <li><a href="#!" class="nav-link scrollto" onclick="dark()"><i class="fas fa-adjust"></i> <span>Dark Theme</span></a></li>
         <!-- <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li> -->
         <!-- <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li> -->
       </ul>
@@ -139,15 +197,15 @@
               <p>Kills</p>
             </div>
           </div>
-<!-- 
+ 
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
             <div class="count-box">
               <i class="bi bi-headset"></i>
-              <span data-purecounter-start="0" data-purecounter-end="1463" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Hours Of Support</p>
+              <span data-purecounter-start="0" data-purecounter-end="1163" data-purecounter-duration="1" class="purecounter"></span>
+              <p>+ Hours Of Game Time</p>
             </div>
           </div>
--->
+
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
             <div class="count-box">
               <i class="bi bi-award"></i>
@@ -281,19 +339,19 @@
             </div>
             <div class="resume-item">
               <h4>Future Star English Boarding School</h4>
-              <h5>2018</h5>
+              <h5  style="color:blue;">2018</h5>
               <p><em>Aanboo Khaireni, Tanahun</em></p>
               <p>Completed SEE with wonderful time spent.</p>
             </div>
             <div class="resume-item">
               <h4>Morgan International College</h4>
-              <h5>2020</h5>
+              <h5  style="color:blue;">2020</h5>
               <p><em>Kathmandu</em></p>
               <p>Completed my College with effective learning of academic and extra-curricular skills.</p>
             </div>
             <div class="resume-item">
               <h4>Morgan International College</h4>
-              <h5>2021 +</h5>
+              <h5 style="color:blue;">2021 +</h5>
               <p><em>Kathmandu</em></p>
               <p>Exploring new dimensions of BCA.</p>
             </div>
@@ -799,6 +857,17 @@
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
   <script src="assets/main.js"></script>
+
+<!-- Dark mode -->
+
+<script>
+function dark() {
+   var element = document.body;
+   element.classList.toggle("dark-mode");
+}
+</script>
+
+
 
 </body>
 
