--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>I've been involved in many projects parallely. Here are some insights to my life and work. I have included mine and other's work worth a view.</p>
+          <p>I've been involved in many projects parallely. Here are some insights to my life and work. I have included mine and other's work worth a view.<br><i>More coming soon..</i></p>
         </div>
 
         <div class="row">
@@ -540,7 +540,7 @@
         </div>
 
       </div>
-      <b>More Coming soon...</b>
+      
     </section>
   
     <!-- End Portfolio Section -->
