--- a/index.html
+++ b/index.html
@@ -832,12 +832,8 @@
         <a href="https://www.instagram.com/syon_rohan/" class="instagram" target="_blank"><i class="bx bxl-instagram"></i></a>
       </div>
       <div class="copyright">
-        &copy; Copyright <strong><span>Rohan Khanal</span></strong>. All Rights Reserved - 2021
-      </div>
-      <div class="credits">
-        
-        Designed by <a href="#">Rohan</a>
-      </div>
+        All Rights Reserved - 2021
+      </div>   
     </div>
   </footer><!-- End Footer -->
 
