--- a/index.html
+++ b/index.html
@@ -778,7 +778,14 @@
                 <p>rkrohankhanal123@gmail.com</p>
               </div>
 
-              
+              <a href="https://m.me/100011003355375">              
+                <div class="email">
+                  <i class="bi bi-messenger"></i>
+                <h4>Chat:</h4>
+                <p>Chat with me on Messenger</p>
+              </div>
+            </a>
+
             </div>
 
           </div>
