--- a/index.html
+++ b/index.html
@@ -766,17 +766,21 @@
 
           <div class="col-lg-4">
             <div class="info">
+              <a href="https://goo.gl/maps/CPdw2kWwwL3r5qGM7">
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
                 <p>Aanboo Khaireni-3, Tanahun, Nepal 44600</p>
               </div>
+              </a>
 
+              <a href="mailto:rkrohankhanal123@gmail.com">
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
                 <p>rkrohankhanal123@gmail.com</p>
               </div>
+              </a>
 
               <a href="https://m.me/100011003355375">              
                 <div class="email">
@@ -784,7 +788,7 @@
                 <h4>Chat:</h4>
                 <p>Chat with me on Messenger</p>
               </div>
-            </a>
+              </a>
 
             </div>
 
