--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Rohan Khanal</h1>
-      <p>I'm <span class="typed" data-typed-items="Student, Gamer, Stock Market analyst"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Student, Gamer, Stock Market Analyst"></span></p>
       <div class="social-links">
         <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a> -->
         <a href="https://www.facebook.com/rohan.khanal.96" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
