--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>19 and counting</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>20 and counting</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Undergraduate (running)</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>rkrohankhanal123@gmail.com</span></li>
                   <!-- <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li> -->
@@ -185,7 +185,7 @@
           <div class="col-lg-3 col-md-6">
             <div class="count-box">
               <i class="bi bi-emoji-smile"></i>
-              <span data-purecounter-start="0" data-purecounter-end="3" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="4.5" data-purecounter-duration="1" class="purecounter"></span>
               <p>aprrox. K/D</p>
             </div>
           </div>
@@ -193,7 +193,7 @@
           <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
             <div class="count-box">
               <i class="bi bi-journal-richtext"></i>
-              <span data-purecounter-start="0" data-purecounter-end="986" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="1280" data-purecounter-duration="1" class="purecounter"></span>
               <p>Kills</p>
             </div>
           </div>
@@ -210,7 +210,7 @@
             <div class="count-box">
               <i class="bi bi-award"></i>
               <span data-purecounter-start="0" data-purecounter-end="1" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Crown-I</p>
+              <p>Ace Dominator</p>
             </div>
           </div>
 
