--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 
         <div class="section-title">
           <h2>Facts</h2>
-          <p>I've got a lot of facts to share. Not all at once! Here's some fun fact about my pubg career:</p>
+          <p>I've got a lot of facts to share. Not all at once! Here's some fun fact about my pubg career. You can try Dark mode.</p>
         </div>
 
         <div class="row">
