--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Hello, I'm Rohan Khanal. I am currently an undergraduate student [BCA]. I am fond of gadgets, techs, games and computers. I have sufficient knowledge on Stock Markets as well. I am an aspiring Computer Expert cum entrepreneur.</p>
+          <p>Hello, I'm Rohan Khanal. I am currently an undergraduate student [BCA]. I am fond of gadgets, techs, games and computers. I have sufficient knowledge on Stock Markets as well. I am an aspiring Computer Expert cum entrepreneur. Hi Bandana :-) </p>
         </div>
 
         <div class="row">
