--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Hello, I'm Rohan Khanal. I am currently an undergraduate student [BCA]. I am fond of gadgets, techs, games and computers. I have sufficient knowledge on Stock Markets as well. I am an aspiring Computer Expert cum entrepreneur </p>
+          <p>Hello, I'm Rohan Khanal. I am currently an undergraduate student [BCA]. I am fond of gadgets, techs, games and computers. I have sufficient knowledge on Stock Markets as well. I am an aspiring Computer Expert entrepreneur </p>
         </div>
 
         <div class="row">
@@ -177,7 +177,7 @@
 
         <div class="section-title">
           <h2>Facts</h2>
-          <p>I've got a lot of facts to share. Not all at once! Here's some fun fact about my pubg career. You can try Dark mode.</p>
+          <p>I've got a lot of facts to share. Not all at once! Here's some fun fact about my pubg career.<br>[Note] Poila ko jasto keldina ahiley Haha </p>
         </div>
 
         <div class="row">
