--- a/index.html
+++ b/index.html
@@ -311,6 +311,7 @@
               <p><em>Innovative and creative Gamer, Student and Stock Market analyst.</em></p>
               <ul>
                 <li>Tanahun, Nepal</li>
+                <li>Baniyatar,Kathmandu</li>
                 <!-- <li>(123) 456-7891</li> -->
                 <li>rkrohankhanal123@gmail.com</li>
               </ul>
