--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
         <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a> -->
         <a href="https://www.facebook.com/rohan.khanal.96" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
         <a href="https://www.instagram.com/syon_rohan/" class="instagram" target="_blank"><i class="bx bxl-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/rohan-khanal-3b250a186/" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
         <!-- <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
         <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a> -->
       </div>
