--- a/pacman/index.html
+++ b/pacman/index.html
@@ -111,7 +111,7 @@
 <br><br><br>
 Info:
 <ul>
-<li>Use arrow keys to move pacman</li>
+<li>Use arrow keys to move pacman in game</li>
 <li>Press 'N' to start a new game</li>
 <li>Press 'P' to Pause/Play.</li>
 <li>Press 's' to turn on/off sounds</li>
